[gd_scene load_steps=5 format=3 uid="uid://b0foxj848a3ys"]

[ext_resource type="Script" path="res://Scripts/CombatGUIScripts/manual_hud_weapon_element.gd" id="1_wayjt"]
[ext_resource type="Theme" uid="uid://bka1x3hcxtfcg" path="res://ThemesandFonts/Themes/CombatGUITheme.tres" id="2_35cnu"]
[ext_resource type="Texture2D" uid="uid://2akl0jaf0y7m" path="res://Art/CombatGUIArt/offweaponsystemcheckbox12x12.png" id="3_jcu5v"]
[ext_resource type="Texture2D" uid="uid://tnkh48own8ek" path="res://Art/CombatGUIArt/weaponsystemcheckbox12x12.png" id="4_0n8mn"]

[node name="ManualHUDWeaponElement" type="GridContainer"]
offset_right = 154.0
offset_bottom = 32.0
script = ExtResource("1_wayjt")

[node name="Row1" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Number" type="RichTextLabel" parent="Row1"]
layout_mode = 2
theme = ExtResource("2_35cnu")
bbcode_enabled = true
text = "0"
fit_content = true
autowrap_mode = 0

[node name="NameCount" type="RichTextLabel" parent="Row1"]
layout_mode = 2
theme = ExtResource("2_35cnu")
bbcode_enabled = true
text = "WEAPONNAME"
fit_content = true
autowrap_mode = 0

[node name="Autofire" type="RichTextLabel" parent="Row1"]
layout_mode = 2
theme = ExtResource("2_35cnu")
theme_override_font_sizes/normal_font_size = 12
text = "AUTOFIRE:"
fit_content = true
autowrap_mode = 0

[node name="AutofireIndicator" type="TextureButton" parent="Row1"]
layout_mode = 2
focus_mode = 0
mouse_filter = 2
toggle_mode = true
keep_pressed_outside = true
texture_normal = ExtResource("3_jcu5v")
texture_pressed = ExtResource("4_0n8mn")
stretch_mode = 0
